# internal/server/game_router.go
@@ -21,6 +21,7 @@ func GameRouter(r chi.Router, h *GameHandler, middlewares ...func(http.Handler) 
 		r.Use(LoggerMiddleware)
 
 		r.Post("/games", h.CreateGame)
+		r.Get("/games", h.GetLatestGame)
 		r.Post("/games/join", h.JoinAnyGame)
 		r.Post("/games/{gameID}/join", h.JoinGame)
 		r.Post("/games/{gameID}/move", h.MakeMove)
